# src/main/java/org/openapitools/api/AuthApiDelegate.java
@@ -1,6 +1,8 @@
 package org.openapitools.api;
 
-import org.openapitools.model.GetLiveliness200Response;
+import org.openapitools.model.PostLogin200Response;
+import org.openapitools.model.PostLogin401Response;
+import org.openapitools.model.PostLoginRequest;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.MediaType;
 import org.springframework.http.ResponseEntity;
@@ -16,27 +18,34 @@ import java.util.Optional;
 import javax.annotation.Generated;
 
 /**
- * A delegate to be called by the {@link LivelinessApiController}}.
+ * A delegate to be called by the {@link AuthApiController}}.
  * Implement this interface with a {@link org.springframework.stereotype.Service} annotated class.
  */
 @Generated(value = "org.openapitools.codegen.languages.SpringCodegen", date = "2025-07-27T17:46:50.636306-04:00[America/New_York]", comments = "Generator version: 7.14.0")
-public interface LivelinessApiDelegate {
+public interface AuthApiDelegate {
 
     default Optional<NativeWebRequest> getRequest() {
         return Optional.empty();
     }
 
     /**
-     * GET /liveliness : Check if the service is alive
+     * POST /auth/login : Login to the service
      *
-     * @return Service is alive (status code 200)
-     * @see LivelinessApi#getLiveliness
+     * @param postLoginRequest  (required)
+     * @return Login successful (status code 200)
+     *         or Unauthorized (status code 401)
+     * @see AuthApi#postLogin
      */
-    default ResponseEntity<GetLiveliness200Response> getLiveliness() {
+    default ResponseEntity<PostLogin200Response> postLogin(PostLoginRequest postLoginRequest) {
         getRequest().ifPresent(request -> {
             for (MediaType mediaType: MediaType.parseMediaTypes(request.getHeader("Accept"))) {
                 if (mediaType.isCompatibleWith(MediaType.valueOf("application/json"))) {
-                    String exampleString = "{ \"status\" : \"alive\" }";
+                    String exampleString = "{ \"token\" : \"token\" }";
+                    ApiUtil.setExampleResponse(request, "application/json", exampleString);
+                    break;
+                }
+                if (mediaType.isCompatibleWith(MediaType.valueOf("application/json"))) {
+                    String exampleString = "{ \"message\" : \"Unauthorized\" }";
                     ApiUtil.setExampleResponse(request, "application/json", exampleString);
                     break;
                 }
